--- a/app/src/main/res/layout/images_gallery_activity.xml
+++ b/app/src/main/res/layout/images_gallery_activity.xml
@@ -5,6 +5,7 @@
 	android:numColumns="2"
 	android:verticalSpacing="5dp"
 	android:horizontalSpacing="5dp"
+	android:background="@drawable/bg1"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	/>
 
