--- a/app/src/main/res/layout/images_gallery_activity.xml
+++ b/app/src/main/res/layout/images_gallery_activity.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridView android:id="@+id/gridView"
+<android.support.v7.widget.RecyclerView
+	android:id="@+id/recyclerView"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:numColumns="2"
-	android:verticalSpacing="5dp"
+	android:verticalSpacing="10dp"
 	android:horizontalSpacing="5dp"
 	android:background="@drawable/bg1"
 	xmlns:android="http://schemas.android.com/apk/res/android"
