--- a/app/src/main/res/layout/images_gallery_activity.xml
+++ b/app/src/main/res/layout/images_gallery_activity.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.RecyclerView
-	android:id="@+id/recyclerView"
+<android.support.v7.widget.RecyclerView android:id="@+id/recyclerView"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:verticalSpacing="10dp"
 	android:horizontalSpacing="5dp"
 	android:background="@drawable/bg1"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	tools:context=".ImagesGalleryActivity"
 	/>
 
