--- a/app/src/main/res/layout/details_activity.xml
+++ b/app/src/main/res/layout/details_activity.xml
@@ -8,7 +8,7 @@
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
-	tools:context="abc.DisasterManagement.DetailsActivity" >
+	tools:context=".DetailsActivity" >
 
 	<LinearLayout
 		android:layout_width="match_parent"
@@ -47,7 +47,8 @@
 		android:layout_height="wrap_content"
 		android:layout_centerHorizontal="true"
 		android:layout_centerVertical="true"
-		android:text="Analysis Resulsts"
-		android:textAppearance="?android:attr/textAppearanceLarge" />
+		android:textAppearance="?android:attr/textAppearanceLarge"
+		android:padding="30dp"
+		/>
 
 </RelativeLayout>
