--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,25 +7,40 @@
 	tools:context=".MainActivity"
 	>
 
-    <Button
-        android:id="@+id/b1"
-        android:layout_width="118dp"
-        android:layout_height="111dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="253dp"
-        android:layout_marginBottom="0dp"
-        android:background="@drawable/bt" />
+	<Button
+		android:id="@+id/history_button"
+		style="@style/Widget.AppCompat.Button.Colored"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignBaseline="@+id/b1"
+		android:layout_alignParentEnd="true"
+		android:layout_alignParentStart="true"
+		android:layout_marginEnd="263dp"
+		android:layout_marginStart="33dp"
+		android:text="@string/history_button"
+		/>
 
-    <Button
-        android:id="@+id/next_button"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/b1"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="36dp"
-        android:text="@string/next_button" />
+	<Button
+		android:id="@+id/b1"
+		android:layout_width="118dp"
+		android:layout_height="111dp"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentEnd="true"
+		android:layout_marginBottom="0dp"
+		android:layout_marginEnd="126dp"
+		android:background="@drawable/bt"
+		/>
+
+	<Button
+		android:id="@+id/next_button"
+		style="@style/Widget.AppCompat.Button.Colored"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignBaseline="@+id/b1"
+		android:layout_alignParentEnd="true"
+		android:layout_marginEnd="24dp"
+		android:text="@string/next_button"
+		/>
 
     <ImageView
         android:id="@+id/imageView3"
