--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@drawable/bg1"
 	tools:context=".MainActivity"
+	android:id="@+id/relativeLayout"
 	>
 
 	<Button
 		android:id="@+id/history_button"
 		style="@style/Widget.AppCompat.Button.Colored"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignBaseline="@+id/b1"
-		android:layout_alignParentEnd="true"
-		android:layout_alignParentStart="true"
-		android:layout_marginEnd="263dp"
-		android:layout_marginStart="33dp"
+		android:layout_width="100dp"
+		android:layout_height="56dp"
+		android:layout_marginBottom="84dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
 		android:text="@string/history_button"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toStartOf="@+id/b1"
+		app:layout_constraintStart_toStartOf="parent"
 		/>
 
 	<Button
 		android:id="@+id/b1"
 		android:layout_width="118dp"
 		android:layout_height="111dp"
-		android:layout_alignParentBottom="true"
-		android:layout_alignParentEnd="true"
-		android:layout_marginBottom="0dp"
-		android:layout_marginEnd="126dp"
+		android:layout_marginBottom="68dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
 		android:background="@drawable/bt"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
 		/>
 
 	<Button
 		android:id="@+id/next_button"
 		style="@style/Widget.AppCompat.Button.Colored"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_alignBaseline="@+id/b1"
-		android:layout_alignParentEnd="true"
-		android:layout_marginEnd="24dp"
+		android:layout_width="100dp"
+		android:layout_height="56dp"
+		android:layout_marginBottom="84dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
 		android:text="@string/next_button"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toEndOf="@+id/b1"
 		/>
 
     <ImageView
@@ -47,26 +55,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 		android:contentDescription="@string/logo_des"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="12dp"
-        android:src="@drawable/t1" />
+		android:layout_marginTop="12dp"
+        android:src="@drawable/t1"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		/>
 
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
 
 
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginBottom="231dp"
+		android:layout_marginBottom="231dp"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="13dp"
         android:layout_marginTop="228dp"
         android:text="@string/app_information"
-        />
-</RelativeLayout>
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		/>
+</android.support.constraint.ConstraintLayout>
